--- a/zyh/index.html
+++ b/zyh/index.html
@@ -1,43 +1,132 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>文件检索系统</title>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script>
-        // 发送查询请求并处理结果
-        function search() {
-            var keyword = document.getElementById("keyword").value;
+    <title>File Search</title>
+    <style>
+        .result {
+            margin-bottom: 20px;
+        }
 
-            $.ajax({
-                url: "search.php", // 后端处理查询的API
-                method: "GET",
-                data: { keyword: keyword },
-                success: function(response) {
-                    // 处理查询结果并显示
-                    var results = JSON.parse(response);
-                    // 进行结果的显示和操作
-                },
-                error: function(xhr, status, error) {
-                    console.log("查询失败: " + error);
-                }
+        .path {
+            font-weight: bold;
+        }
+
+        .line {
+            margin-bottom: 5px;
+        }
+
+        #saveButton {
+            display: none;
+        }
+    </style>
+</head>
+<body>
+    <h1>File Search</h1>
+
+    <form id="searchForm">
+        <label for="keywords">Enter Keywords:</label>
+        <input type="text" id="keywords" name="keywords" required>
+        <input type="submit" value="Search">
+    </form>
+
+    <div id="results"></div>
+
+    <button id="saveButton" onclick="saveResults()">Save</button>
+
+    <script>
+        const searchForm = document.getElementById('searchForm');
+        const resultsContainer = document.getElementById('results');
+        const saveButton = document.getElementById('saveButton');
+        let selectedResults = [];
+
+        searchForm.addEventListener('submit', (event) => {
+            event.preventDefault();
+            const keywords = document.getElementById('keywords').value;
+            searchFiles(keywords);
+        });
+
+        function searchFiles(keywords) {
+            fetch('/search', {
+                method: 'POST',
+                body: new URLSearchParams({
+                    'keywords': keywords
+                })
+            })
+            .then(response => response.json())
+            .then(data => {
+                displayResults(data);
             });
         }
 
-        // 处理用户选择查询结果并保存
-        function saveSelectedResults() {
-            // 获取用户选择的结果，发送给后端并下载保存
+        function displayResults(results) {
+            resultsContainer.innerHTML = '';
+
+            results.forEach(result => {
+                const resultDiv = document.createElement('div');
+                resultDiv.classList.add('result');
+
+                const path = document.createElement('p');
+                path.classList.add('path');
+                path.textContent = result.path;
+                resultDiv.appendChild(path);
+
+                result.lines.forEach(line => {
+                    const lineDiv = document.createElement('div');
+                    lineDiv.classList.add('line');
+                    lineDiv.textContent = line;
+                    resultDiv.appendChild(lineDiv);
+                });
+
+                const separator = document.createElement('hr');
+                resultDiv.appendChild(separator);
+
+                resultDiv.addEventListener('click', () => {
+                    resultDiv.classList.toggle('selected');
+                    updateSelectedResults();
+                });
+
+                resultsContainer.appendChild(resultDiv);
+            });
+
+            saveButton.style.display = 'none';
+            selectedResults = [];
+        }
+
+        function updateSelectedResults() {
+            const selectedDivs = document.getElementsByClassName('result selected');
+            selectedResults = [];
+
+            for (let i = 0; i < selectedDivs.length; i++) {
+                const path = selectedDivs[i].querySelector('.path').textContent;
+                const lines = Array.from(selectedDivs[i].querySelectorAll('.line')).map(line => line.textContent);
+                selectedResults.push({ path, lines });
+            }
+
+            if (selectedResults.length > 0) {
+                saveButton.style.display = 'block';
+            } else {
+                saveButton.style.display = 'none';
+            }
+        }
+
+        function saveResults() {
+            const textContent = selectedResults.map(result => {
+                let content = `${result.path}\n`;
+                result.lines.forEach(line => {
+                    content += `${line}\n`;
+                });
+                content += '\n';
+                return content;
+            }).join('');
+
+            const element = document.createElement('a');
+            const file = new Blob([textContent], { type: 'text/plain' });
+            element.href = URL.createObjectURL(file);
+            element.download = 'search_results.txt';
+            document.body.appendChild(element);
+            element.click();
+            document.body.removeChild(element);
         }
     </script>
-</head>
-<body>
-    <h1>文件检索系统</h1>
-    <input type="text" id="keyword" placeholder="输入关键字">
-    <button onclick="search()">查询</button>
-
-    <!-- 显示查询结果的区域 -->
-    <div id="results"></div>
-
-    <!-- 操作选中结果并保存 -->
-    <button onclick="saveSelectedResults()">保存选中结果</button>
 </body>
 </html>
